# ros2-robotics-tutorial

./: LICENSE  README.md
docs/: demo_steps.md  environment_setup.md  lesson_notes.md  tutorial_outline.md
ros2_ws/: .gitignore  run.sh  start_sim.sh
ros2_ws/config/: robot_params.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/behavior/share/behavior/: package.sh
ros2_ws/install/perception/share/perception/: package.sh  package.xml
ros2_ws/install/platform_interface/share/platform_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/behavior/: package.xml  setup.py
ros2_ws/src/behavior/behavior/: motion_controller.py
ros2_ws/src/perception/: setup.py
ros2_ws/src/perception/perception/: obstacle_avoidance.py  obstacle_info.py
ros2_ws/src/platform_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/platform_interface/platform_interface/: platform_interface.py
